# Morris

./: .gitignore  .gitmodules  README.md  setup.py
cpp/: .bazelrc  MODULE.bazel  WORKSPACE  build.bzl  bzl_compile.sh  deps.bzl
cpp/main/: BUILD  main.cc  main_2_new.cc  python_benchmark.py  run.cc  run.h
cpp/main/lib/audio-streamer/: BUILD  audio_stream.cc  audio_stream.h
cpp/main/lib/audio-transcriber/: BUILD  audio_transcriber.cc  audio_transcriber.h
cpp/main/lib/llm-generator/: BUILD  config.json  generation.cc  generation.h  generation_test.cc
cpp/main/lib/model/: BUILD  audio_tensor.cc  audio_tensor.h  audio_test.cc  model_base.cc  model_base.h
cpp/main/lib/util/: BUILD  common.cc  common.h  common_sdl.cc  common_test.cc  feature_extractor.cc  feature_extractor.h
cpp/main/lib/wake-classifier/: BUILD  wake_classifier.cc  wake_classifier.h
cpp/olive/olive_config/: ast_dataset.py  ast_ptq_cpu_config.json  whisper_cpu_config.json  whisper_dataset.py
cpp/python/olive_config/: ast_ptq_cpu_hf_config.json  whisper_cpu_config.json  whisper_cpu_hf_config.json  whisper_dataset.py
cpp/test/: BUILD
cpp/tools/config/: BUILD
cpp/tools/pytorch/: generate_code.py
python/: launch.py  main.py  utils.py
python/multiprocessing/: queue.py
python/transcribe/: transcriber.py
python/wake/: wake_classifier.py
