## MODULE.bazel
module(
    name = "morris",
)


data_deps_ext = use_extension("//:deps.bzl", "data_deps_ext")
use_repo(data_deps_ext, "com_github_ggerganov_whisper")
#use_repo(data_deps_ext, "rules_foreign_cc")
use_repo(data_deps_ext, "com_github_libsdl_sdl2")


bazel_dep(name = "bazel_skylib", version = "1.4.2")
bazel_dep(name = "rules_cc", version = "0.0.9")
bazel_dep(name = "rules_foreign_cc", version = "0.10.1")